--- a/consignment-service/Makefile
+++ b/consignment-service/Makefile
@@ -1,5 +1,5 @@
 build:
-	protoc -I. --go_out=plugins=micro:/Users/ronhansen/code/sideprojects/go-time/consignment-service \
+	protoc -I. --go_out=plugins=micro:$(GOPATH)/src/go-time/consignment-service \
 	  proto/consignment/consignment.proto
 	GOOS=linux GOARCH=amd64 go build
 	docker build -t consignment-service .
